--- a/index.html
+++ b/index.html
@@ -20,18 +20,12 @@
     </div>
     </main>
     <h3>Con este proyecto podras crear flashcards para estudiar y repasar las respuestas, <br>clickea en el corazon para agregar una flashcard.</h3>
-    <form>
-        <input type="text" placeholder="Agrega la pregunta">
-        <input  id="input2" placeholder="Agrega la respuesta">
-        <button class="boton-imagen"><img src="img/Button.png" alt="agregar"></button>
+    <form id="formulario">
+        <input id="preguntas"type="text" placeholder="Agrega la pregunta">
+        <input  id="respuestas" placeholder="Agrega la respuesta">
+        <button  class="boton-imagen"><img src="img/Button.png" alt="agregar"></button>
     </form>
     <div class="contenedor-tarjetas">
-        <div class="tarjeta">Tarjeta</div>
-        <div class="tarjeta">Tarjeta</div>
-        <div class="tarjeta">Tarjeta</div>
-        <div class="tarjeta">Tarjeta</div>
-        <div class="tarjeta">Tarjeta</div>
-        <div class="tarjeta">Tarjeta</div>
     </div>
 <script src="app.js"></script>
 </body>
