Agregar funcion eliminar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <h1>Flashcards System</h1>
     </div>
     </main>
-    <h3>Con este proyecto podras crear flashcards para estudiar y repasar las respuestas, <br>clickea en el corazon para agregar una flashcard.<br>Posiciona el mouse sobre la tarjeta para revelar la respuesa.</h3>
+    <h3>Con este proyecto podras crear flashcards para estudiar y repasar las respuestas, <br>💕Clickea en el corazon para agregar una flashcard.<br>💕Posiciona el mouse sobre la tarjeta para revelar la respuesa. <br>
+    💕Clickea en una tarjeta para eliminarla.</h3>
     <form id="formulario">
         <div class="contenedor-input">
         <span id="contador-preguntas">0 / 80</span>
@@ -29,10 +30,10 @@
         <span id="contador-respuestas">0 / 80</span>
         <input  id="respuestas" maxlength="80"  placeholder="Agrega la respuesta">
         </div>
-        <button  class="boton-imagen"><img src="img/Button.png" alt="agregar"></button>
+        <button type="submit" class="boton-imagen"><img src="img/Button.png" alt="agregar"></button>
     </form>
     <div class="contenedor-tarjetas">
     </div>
-<script src="app.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
